# mercs2-modkit

./: .gitignore  README.md  package-lock.json  package.json  registry.json
.github/workflows/: ci.yml  release.yml
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_manifest.rs  verify_offline.rs
src-tauri/flatpak/: com.mercenaries-fan-build.modkit.yml  com.mercenaries_fan_build.modkit.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asset_catalog.rs  conflict_resolver.rs  debug_bundle.rs  deploy.rs  game.rs  installer.rs  launch.rs  logprobe.rs  mod.rs  mod_loader.rs  paths.rs  registry.rs  setup.rs  updates.rs  validator.rs  vcredist.rs  verify.rs  wad_builder.rs
src-tauri/src/models/: conflict.rs  manifest.rs  mod.rs  project.rs
src/components/: ConfirmDialog.vue  ConflictBadge.vue  GameBar.vue  ProgressBar.vue  Spinner.vue
src/composables/: spatialNav.ts  useGamepad.ts  useGamepadNavigation.ts
src/router/: index.ts
src/stores/: project.ts
src/views/: CatalogView.vue  ConflictView.vue  DiagnosticsView.vue  ExportView.vue  GameInfoView.vue  ModDetailView.vue  ProjectView.vue  SetupView.vue
