[package]
name = "mercs2-modkit"
version = "0.1.0"
description = "Mercenaries 2 mod manager: load, validate, merge, and assemble patch WADs"
authors = ["Mercenaries Fan Build Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mercs2_modkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Mercenaries 2 format libraries (published to crates.io)
mercs2_formats = "1.0"
ucfx_byteswap = "1.0"
loadprobe = "1.0"

# HTTP client for fetching the wad_simulator release binary (rustls to avoid system OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Unpacking downloaded mod release artifacts
zip = "2"

